Add stub for dump exports option
Signed-off-by: José Simões <jose.simoes@eclo.solutions>

--- a/source/MetadataProcessor.Core/MetadataProcessor.Core.csproj
+++ b/source/MetadataProcessor.Core/MetadataProcessor.Core.csproj
@@ -111,7 +111,9 @@
     <None Include="packages.config" />
     <Compile Include="SkeletonGenerator\SkeletonTemplates.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="ParserDump\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Nerdbank.GitVersioning.3.0.28\build\Nerdbank.GitVersioning.targets" Condition="Exists('..\packages\Nerdbank.GitVersioning.3.0.28\build\Nerdbank.GitVersioning.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
