--- a/source/MetadataProcessor.Tests/packages.config
+++ b/source/MetadataProcessor.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Mono.Cecil" version="0.11.2" targetFramework="net461" />
-  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="Mono.Cecil" version="0.11.2" targetFramework="net472" />
+  <package id="MSTest.TestAdapter" version="2.1.0" targetFramework="net472" />
+  <package id="MSTest.TestFramework" version="2.1.0" targetFramework="net472" />
 </packages>
