--- a/source/MetadataProcessor.Tests/MetadataProcessor.Tests.csproj
+++ b/source/MetadataProcessor.Tests/MetadataProcessor.Tests.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Utility\LoadHintsAssemblyResolverTests.cs" />
+    <Compile Include="Core\Utility\Crc32Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestPreprocessedFiles.cs" />
   </ItemGroup>
