--- a/source/MetadataProcessor.Tests/MetadataProcessor.Tests.csproj
+++ b/source/MetadataProcessor.Tests/MetadataProcessor.Tests.csproj
@@ -75,8 +75,6 @@
     <Compile Include="Core\Utility\Crc32Tests.cs" />
     <Compile Include="Core\Utility\nanoBitmapProcessorTests.cs" />
     <Compile Include="Core\Utility\nanoDependencyGeneratorWriterTests.cs" />
-    <Compile Include="DummyCustomAttribute1.cs" />
-    <Compile Include="DummyCustomAttribute2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestObjectHelper.cs" />
     <Compile Include="TestPreprocessedFiles.cs" />
@@ -114,4 +112,9 @@
     <Error Condition="!Exists('..\packages\MSTest.TestAdapter.2.1.0\build\net45\MSTest.TestAdapter.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MSTest.TestAdapter.2.1.0\build\net45\MSTest.TestAdapter.targets'))" />
   </Target>
   <Import Project="..\packages\MSTest.TestAdapter.2.1.0\build\net45\MSTest.TestAdapter.targets" Condition="Exists('..\packages\MSTest.TestAdapter.2.1.0\build\net45\MSTest.TestAdapter.targets')" />
+  <PropertyGroup>
+    <PreBuildEvent>mkdir "$(TargetDir)\TestNFApp"
+copy /y "$(ProjectDir)\TestNFApp\$(OutDir)\*" "$(TargetDir)\TestNFApp"
+</PreBuildEvent>
+  </PropertyGroup>
 </Project>
