--- a/source/MetadataProcessor.Tests/MetadataProcessor.Tests.csproj
+++ b/source/MetadataProcessor.Tests/MetadataProcessor.Tests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Core\Endianness\nanoBinaryWriterTests.cs" />
     <Compile Include="Core\Extensions\ByteArrayExtensionsTests.cs" />
     <Compile Include="Core\Extensions\ParameterDefintionExtensionsTests.cs" />
+    <Compile Include="Core\Extensions\TypeDefinitionExtensionsTests.cs" />
     <Compile Include="Core\Tables\nanoAttributesTableTests.cs" />
     <Compile Include="Core\Tables\nanoReferenceTableBaseTests.cs" />
     <Compile Include="Core\Utility\LoadHintsAssemblyResolverTests.cs" />
