--- a/source/MetadataProcessor.Tests/MetadataProcessor.Tests.csproj
+++ b/source/MetadataProcessor.Tests/MetadataProcessor.Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Core\Extensions\ParameterDefintionExtensionsTests.cs" />
     <Compile Include="Core\Extensions\TypeDefinitionExtensionsTests.cs" />
     <Compile Include="Core\Extensions\TypeReferenceExtensionsTests.cs" />
+    <Compile Include="Core\Mono.Cecil\CodeWriterTests.cs" />
     <Compile Include="Core\Tables\nanoAttributesTableTests.cs" />
     <Compile Include="Core\Tables\nanoReferenceTableBaseTests.cs" />
     <Compile Include="Core\Utility\LoadHintsAssemblyResolverTests.cs" />
